# HollaBack

./: .gitignore  Gemfile  HollaBack.cabal  Makefile  README.md
HollaBack/: Mailer.hs  Types.hs
HollaBack/Date/: Conversion.hs  Parser.hs  Types.hs
HollaBack/MailServer/: holla_back_observer.rb
HollaBack/Scheduler/: CLI.hs  Main.hs  Storage.hs  Types.hs
HollaBack/Testing/: Main.hs
HollaBack/Testing/Date/: Conversion.hs  Parser.hs
